# rmidi

./: .gitignore  .gitmodules  APPLE_SETUP.md  BUILD_FIXES.md  BUILD_FIX_INSTRUCTIONS.md  CHANGELOG.md  CI_FIXES_APPLIED.md  CI_SKIP_GUIDE.md  COMPLETE_PYQT6_CI_FIX.md  GIT_HOOKS.md  GIT_HOOKS_FIXES.md  HOOK_TESTING.md  PRIVACY.md  PYTEST_COMMAND_DIFFERENCE.md  QT_TEST_ENABLEMENT.md  README.md  SETUP_INSTRUCTIONS.md  SUBMODULE_SETUP.md  UBUNTU_24_04_PACKAGE_FIX.md  build_environment_setup.txt  build_instructions.md  ci_skip_examples.sh  cleanup-submodules.sh  conftest.py  debug_path.py  deploy-build-fixes.sh  deploy.sh  dev.sh  device_manager.py  entitlements.plist  fix_git_submodule.sh  git_operations.py  github_secrets.json  install-hooks.sh  main.py  make_executable.sh  midi_utils.py  models.py  optimized_get_all_patches.py  optimized_scan_devices.py  (+35 more)
.github/: ACTION_PATH_FIXES.md  BUILD_FIXES_SUMMARY.md  BUILD_SYSTEM_README.md  BUILD_TROUBLESHOOTING.md  FINAL_CONFIGURATION_UNSIGNED_WINDOWS.md  FINAL_OVERHAUL_SUMMARY.md  GITHUB_ACTIONS_README.md  MACOS_SIGNING_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SCRIPTS_CLEANUP_SUMMARY.md  SECRETS_STATUS.md  SECURITY_AUDIT.md  VERSION_FIXES_SUMMARY.md  WORKFLOW_REFERENCE_FIXES.md  fix-permissions.sh  old_docs.bak
.github/actions/build-apps/: action.yml
.github/actions/build-macos-direct/: action.yml
.github/actions/cleanup-signing/: action.yml
.github/actions/configure-build/: action.yml
.github/actions/package-apps/: action.yml
.github/actions/package-macos-pkg/: action.yml
.github/actions/setup-macos-signing/: action.yml
.github/old_actions/build-apps/: action.yml
.github/old_actions/install-system-deps/: action.yml
.github/old_actions/package-apps/: action.yml
.github/old_actions/setup-environment/: action.yml
.github/old_docs/: ALL_FIXES_COMPLETE.md  BUILD_FIXES_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md
.github/scripts/: README.md  build-briefcase-apps.sh  build-briefcase.sh  build-briefcase.sh.old  build-macos.sh  build-macos.sh.old  build-python-package.sh  compare-versions-ci.sh  extract-version.sh  final-validation.sh  generate-build-summary.sh  install-python-dependencies.sh  install-system-dependencies.sh  make-scripts-executable.sh  package-linux-apps.sh  package-macos-apps.sh  package-windows-apps.sh  prepare-release-artifacts.sh  setup-clean-workflows.sh  setup-environment.sh  setup-scripts.sh  setup-workflows.sh  sign-and-notarize-macos.sh  test-build-environment-quick.sh  test-version-fixes-portable.sh  test-version-fixes-simple.sh  test-version-fixes.sh  test-workflows-locally.sh  update-version.sh  validate-build-environment.sh  validate-project-structure.sh  validate-refactoring.sh
.github/workflows/: README.md  app-store.yml  app-store.yml.old  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  ci.yml  dev.yml  macos-native.yml  macos-native.yml.old  python-package.yml  python-publish.yml  release.yml  reusable-build.yml  reusable-build.yml.old  reusable-test.yml  reusable-test.yml.old
devices/: expressivee_osmose.json
docs/: 401_error_quick_fix.md  README.md  apple_auth_troubleshooting.md  apple_auth_update.md  apple_notarization_guide.md  dependency_management.md  github_secrets_guide.md  pypi_publishing_guide.md
hooks/: pre-commit
midi_patch_client/: __init__.py  api_client.py  config.py  main.py  models.py  performance.py  requirements.txt  shortcuts.py  themes.py
midi_patch_client/ui/: __init__.py  device_panel.py  edit_dialog.py  main_window.py  patch_panel.py  preferences_dialog.py
midi_preset_client/: api_client.py  config.py  main.py  test_colors.py
midi_preset_client/ui/: device_panel.py  edit_dialog.py  main_window.py  patch_panel.py  preferences_dialog.py  preset_panel.py
r2midi_client/: COLOR_FIX_README.md  __init__.py  __main__.py  api_client.py  config.py  main.py  models.py  performance.py  requirements.txt  setup.py  shortcuts.py  test_colors.py  themes.py
r2midi_client/ui/: __init__.py  device_panel.py  edit_dialog.py  main_window.py  patch_panel.py  preferences_dialog.py  preset_panel.py
resources/: CREATE_ICONS.md  create_placeholder_icon.py  r2midi.icns
scripts/: README.md  certificate_manager.py  debug_certificates.sh  generate_icons.py  list_github_secrets.py  requirements.txt  setup_apple_store.py  setup_github_secrets.py  test_icon_encoding.py  update_pyproject.py  validate_pyproject.py
server/: __init__.py  __main__.py  device_manager.py  git_operations.py  main.py  midi_utils.py  models.py  requirements.txt  run_server.py  setup.py  ui_launcher.py  version.py
server.dist-info/: METADATA
server/midi-presets/: README.md
tests/: README.md  __init__.py  requirements.txt  test_debug_path.py
tests/temp/: test_qtbot.py
tests/unit/: test_device_manager.py  test_main.py  test_midi_utils.py  test_models.py  test_ui_launcher.py
tests/unit/midi_patch_client/: test_api_client.py  test_models.py
tests/unit/r2midi_client/: __init__.py  test_api_client.py  test_models.py
tests/unit/server/: __init__.py  test_device_manager.py  test_main.py  test_midi_utils.py  test_models.py  test_ui_launcher.py
