[project]
name = "rmidi"
# Version is managed in version.py and automatically updated by git pre-commit hook
# The version here should match the one in version.py
version = "0.1.0"
description = "MIDI 2.0 Patch Selection Application"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "python-rtmidi>=1.5.5",
    "mido>=1.3.0",
    "pyqt6>=6.5.2",
    "httpx>=0.25.0",
    "devenv>=0.1.1",
    "python-dotenv>=1.0.0",
    "black>=24.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]
