[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "r2midi"
version = "0.1.123"
description = "MIDI 2.0 Patch Selection Application"
authors = [
    {name = "R2MIDI Team", email = "example@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9  "
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "python-rtmidi>=1.5.5",
    "mido>=1.3.0",
    "pyqt6>=6.5.2",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "black>=24.8.0",
    "GitPython>=3.1.40",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]
dev = [
    "briefcase>=0.3.21",
    "black>=24.8.0",
    "flake8>=7.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tirans/r2midi"
"Bug Tracker" = "https://github.com/tirans/r2midi/issues"

# ========================================
# Briefcase Configuration
# ========================================

[tool.briefcase]
project_name = "R2MIDI"
bundle = "com.r2midi"
version = "0.1.123"
url = "https://github.com/tirans/r2midi"
license = {text = "MIT"}
author = "R2MIDI Team"
author_email = "tiran@tirans.com"

[tool.briefcase.app.server]
formal_name = "R2MIDI Server"
description = "MIDI 2.0 Patch Selection Server API"
long_description = """R2MIDI Server is a REST API for managing and selecting MIDI presets across various devices and manufacturers."""
icon = "resources/r2midi"

sources = [
    "server",
]

test_sources = ["tests"]

requires = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "python-rtmidi>=1.5.5",
    "mido>=1.3.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "GitPython>=3.1.40",
    "psutil>=7.0.0",
]

# Define entry point for the server app
startup_module = "server.main"
startup_method = "main"

[tool.briefcase.app.r2midi-client]
formal_name = "R2MIDI Client"
description = "MIDI 2.0 Patch Selection Client UI"
long_description = """R2MIDI Client is a user interface for managing and selecting MIDI presets across various devices and manufacturers."""
icon = "resources/r2midi"

sources = [
    "r2midi_client",
]

test_sources = ["tests/unit/r2midi_client"]

requires = [
    "pyqt6>=6.9.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.5",
    "psutil>=7.0.0",
]

# Define entry point for the client app
startup_module = "r2midi_client.main"
startup_method = "main"

# ========================================
# macOS Configuration
# ========================================
[tool.briefcase.app.server.macOS]
requires = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2", 
    "pydantic>=2.4.2",
    "python-rtmidi>=1.5.5",
    "mido>=1.3.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "GitPython>=3.1.40",
    "psutil>=7.0.0",
    "std-nslog",
]

# macOS specific settings
# The codesign_identity is set dynamically during the build process
# The actual identity is provided by the GitHub Actions workflow
# For notarization, we need to use "Developer ID Application" certificate
codesign_identity = "Developer ID Application"
entitlements_file = "entitlements.plist"
packaging_format = "dmg,pkg"

[tool.briefcase.app.r2midi-client.macOS]
requires = [
    "pyqt6>=6.9.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.5",
    "psutil>=7.0.0",
    "std-nslog",
]

# macOS specific settings
# The codesign_identity is set dynamically during the build process
# The actual identity is provided by the GitHub Actions workflow
# For notarization, we need to use "Developer ID Application" certificate
codesign_identity = "Developer ID Application"
entitlements_file = "entitlements.plist"
packaging_format = "dmg,pkg"

# ========================================
# Windows Configuration  
# ========================================
[tool.briefcase.app.server.windows]
requires = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2", 
    "python-rtmidi>=1.5.5",
    "mido>=1.3.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "GitPython>=3.1.40",
    "psutil>=7.0.0",
]
sign_app = false

[tool.briefcase.app.r2midi-client.windows]
requires = [
    "pyqt6>=6.9.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.5",
    "psutil>=7.0.0",
]
sign_app = false

# ========================================
# Linux Configuration
# ========================================
[tool.briefcase.app.server.linux]
requires = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "python-rtmidi>=1.5.5", 
    "mido>=1.3.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "GitPython>=3.1.40",
    "psutil>=7.0.0",
]
target = "system"

[tool.briefcase.app.r2midi-client.linux]
requires = [
    "pyqt6>=6.9.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.5",
    "psutil>=7.0.0",
]
target = "system"

# ========================================
# Development Configuration
# ========================================
[tool.briefcase.app.server.dev]
debug = true
console_app = true

[tool.briefcase.app.r2midi-client.dev]
debug = true
console_app = false
